--- a/Panda Code.ipynb
+++ b/Panda Code.ipynb
@@ -123,10 +123,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0    5\n",
-      "1    5\n",
-      "2    5\n",
-      "3    5\n",
+      "0    16\n",
+      "1    16\n",
+      "2    16\n",
+      "3    16\n",
+      "8    16\n",
       "dtype: int64\n"
      ]
     }
@@ -134,7 +135,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "s = pd.Series(5, index = [0, 1, 2, 3])\n",
+    "s = pd.Series(16, index = [0, 1, 2, 3, 8])\n",
     "print(s)\n",
     "\n",
     "#if data is a scalar value, an index must be provided.\n",
@@ -143,8 +144,490 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "58e13392",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a    1\n",
+      "b    2\n",
+      "c    3\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "s = pd.Series([1, 2, 3, 4, 5], index = ['a', 'b', 'c', 'd', 'e'])\n",
+    "#retrieve the first three element\n",
+    "print(s[:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b9be6b81",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c    3\n",
+      "d    4\n",
+      "e    5\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "s = pd.Series([1, 2, 3, 4, 5], index = ['a', 'b', 'c', 'd', 'e'])\n",
+    "#retrieve the last three element\n",
+    "print(s[-3:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b35b6398",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 5\n",
+      "6\n",
+      "5\n",
+      "0.6666666666666666\n",
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "s = pd.Series([1, 2, 3, 4, 5], index = ['a', 'b', 'c', 'd', 'e'])\n",
+    "#retrieve the a single element using label (Index)\n",
+    "print(s['a'], s['b'], s['e'])\n",
+    "\n",
+    "mult1 = s['b'] * s['c']\n",
+    "print(mult1)\n",
+    "\n",
+    "sum1 = s['b'] + s['c']\n",
+    "print(sum1)\n",
+    "\n",
+    "div1 = s['b'] / s['c']\n",
+    "print(div1)\n",
+    "\n",
+    "sub1 = s['b'] - s['c']\n",
+    "print(sub1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "3d77d2d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a    1\n",
+      "b    2\n",
+      "c    3\n",
+      "d    4\n",
+      "e    5\n",
+      "dtype: int64\n",
+      "a    1\n",
+      "c    3\n",
+      "d    4\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "s = pd.Series([1, 2, 3, 4, 5], index = ['a', 'b', 'c', 'd', 'e'])\n",
+    "print(s)\n",
+    "#Retrieve multiple elements using a List of index Label values\n",
+    "print(s[['a', 'c', 'd']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "cf541e32",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   0\n",
+      "0  1\n",
+      "1  2\n",
+      "2  3\n",
+      "3  4\n",
+      "4  5\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "data = [1,2,3,4,5]\n",
+    "df = pd.DataFrame(data)\n",
+    "print (df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "a13ee052",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Name  Age\n",
+      "0    Alex   10\n",
+      "1     Bob   12\n",
+      "2  Clarke   13\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "data = [['Alex',10],['Bob',12],['Clarke',13]]\n",
+    "df = pd.DataFrame(data,columns=['Name','Age'])\n",
+    "print (df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "598bf8c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Name   Age\n",
+      "0    Alex  10.0\n",
+      "1     Bob  12.0\n",
+      "2  Clarke  13.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\staff\\AppData\\Local\\Temp\\ipykernel_12196\\1285569995.py:3: FutureWarning: Could not cast to float64, falling back to object. This behavior is deprecated. In a future version, when a dtype is passed to 'DataFrame', either all columns will be cast to that dtype, or a TypeError will be raised.\n",
+      "  df = pd.DataFrame(data,columns=['Name','Age'],dtype=float)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "data = [['Alex',10],['Bob',12],['Clarke',13]]\n",
+    "df = pd.DataFrame(data,columns=['Name','Age'],dtype=float)\n",
+    "print (df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "4c91ba8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Name  Age\n",
+      "0    Tom   28\n",
+      "1   Jack   34\n",
+      "2  Steve   29\n",
+      "3  Ricky   42\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "data = {'Name':['Tom', 'Jack', 'Steve', 'Ricky'],'Age':[28,34,29,42]}\n",
+    "df = pd.DataFrame(data)\n",
+    "print (df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "f56a6bd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        Name  Age\n",
+      "rank1    Tom   28\n",
+      "rank2   Jack   34\n",
+      "rank3  Steve   29\n",
+      "rank4  Ricky   42\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "data = {'Name':['Tom', 'Jack', 'Steve', 'Ricky'],'Age':[28,34,29,42]}\n",
+    "df = pd.DataFrame(data, index=['rank1','rank2','rank3','rank4'])\n",
+    "print (df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "50f5832f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   a   b     c\n",
+      "0  1   2   NaN\n",
+      "1  5  10  20.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "data = [{'a': 1, 'b': 2},{'a': 5, 'b': 10, 'c': 20}]\n",
+    "df = pd.DataFrame(data)\n",
+    "print (df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "cb06b038",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        a   b     c\n",
+      "first   1   2   NaN\n",
+      "second  5  10  20.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "data = [{'a': 1, 'b': 2},{'a': 5, 'b': 10, 'c': 20}]\n",
+    "df = pd.DataFrame(data, index=['first', 'second'])\n",
+    "print (df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "10d6a2b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        a   b\n",
+      "first   1   2\n",
+      "second  5  10\n",
+      "        a  b1\n",
+      "first   1 NaN\n",
+      "second  5 NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "data = [{'a': 1, 'b': 2},{'a': 5, 'b': 10, 'c': 20}]\n",
+    "\n",
+    "#With two column indices, values same as dictionary keys\n",
+    "df1 = pd.DataFrame(data, index=['first', 'second'], columns=['a', 'b'])\n",
+    "\n",
+    "#With two column indices with one index with other name\n",
+    "df2 = pd.DataFrame(data, index=['first', 'second'], columns=['a', 'b1'])\n",
+    "print (df1)\n",
+    "print (df2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "cc15be44",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   one  two\n",
+      "a  1.0    1\n",
+      "b  2.0    2\n",
+      "c  3.0    3\n",
+      "d  NaN    4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "d = {'one' : pd.Series([1, 2, 3], index=['a', 'b', 'c']),\n",
+    "   'two' : pd.Series([1, 2, 3, 4], index=['a', 'b', 'c', 'd'])}\n",
+    "\n",
+    "df = pd.DataFrame(d)\n",
+    "print (df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "bdfe1553",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a    1.0\n",
+      "b    2.0\n",
+      "c    3.0\n",
+      "d    NaN\n",
+      "Name: one, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "d = {'one' : pd.Series([1, 2, 3], index=['a', 'b', 'c']),\n",
+    "   'two' : pd.Series([1, 2, 3, 4], index=['a', 'b', 'c', 'd'])}\n",
+    "\n",
+    "df = pd.DataFrame(d)\n",
+    "print (df ['one'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "6d093ecc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adding a new column by passing as Series:\n",
+      "   one  two  three\n",
+      "a  1.0    1   10.0\n",
+      "b  2.0    2   20.0\n",
+      "c  3.0    3   30.0\n",
+      "d  NaN    4    NaN\n",
+      "Adding a new column using the existing columns in DataFrame:\n",
+      "   one  two  three  four\n",
+      "a  1.0    1   10.0  11.0\n",
+      "b  2.0    2   20.0  22.0\n",
+      "c  3.0    3   30.0  33.0\n",
+      "d  NaN    4    NaN   NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "d = {'one' : pd.Series([1, 2, 3], index=['a', 'b', 'c']),\n",
+    "   'two' : pd.Series([1, 2, 3, 4], index=['a', 'b', 'c', 'd'])}\n",
+    "\n",
+    "df = pd.DataFrame(d)\n",
+    "\n",
+    "# Adding a new column to an existing DataFrame object with column label by passing new series\n",
+    "\n",
+    "print (\"Adding a new column by passing as Series:\")\n",
+    "df['three']=pd.Series([10,20,30],index=['a','b','c'])\n",
+    "print (df)\n",
+    "\n",
+    "print (\"Adding a new column using the existing columns in DataFrame:\")\n",
+    "df['four']=df['one']+df['three']\n",
+    "\n",
+    "print (df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "194cd5ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Our dataframe is:\n",
+      "   one  two  three\n",
+      "a  1.0    1   10.0\n",
+      "b  2.0    2   20.0\n",
+      "c  3.0    3   30.0\n",
+      "d  NaN    4    NaN\n",
+      "Deleting the first column using DEL function:\n",
+      "   two  three\n",
+      "a    1   10.0\n",
+      "b    2   20.0\n",
+      "c    3   30.0\n",
+      "d    4    NaN\n",
+      "Deleting another column using POP function:\n",
+      "   three\n",
+      "a   10.0\n",
+      "b   20.0\n",
+      "c   30.0\n",
+      "d    NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using the previous DataFrame, we will delete a column\n",
+    "# using del function\n",
+    "import pandas as pd\n",
+    "\n",
+    "d = {'one' : pd.Series([1, 2, 3], index=['a', 'b', 'c']), \n",
+    "   'two' : pd.Series([1, 2, 3, 4], index=['a', 'b', 'c', 'd']), \n",
+    "   'three' : pd.Series([10,20,30], index=['a','b','c'])}\n",
+    "\n",
+    "df = pd.DataFrame(d)\n",
+    "print (\"Our dataframe is:\")\n",
+    "print (df)\n",
+    "\n",
+    "# using del function\n",
+    "print (\"Deleting the first column using DEL function:\")\n",
+    "del df['one']\n",
+    "print (df)\n",
+    "\n",
+    "# using pop function\n",
+    "print (\"Deleting another column using POP function:\")\n",
+    "df.pop('two')\n",
+    "print (df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5cc49ad2",
    "metadata": {},
    "outputs": [],
    "source": []
