--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -2,34 +2,33 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "91a6d2bc",
    "metadata": {},
    "source": [
-    "<h1>Import Numpy</h1>"
+    "# numpy"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a9ffe113",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n"
+     ]
+    }
+   ],
    "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2d0b2e47",
-   "metadata": {},
-   "source": [
-    "<h1>Basic Example</h1>"
+    "import numpy as np\n",
+    "a=np.array([1,2,3])\n",
+    "print (a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "df748a09",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -44,22 +43,13 @@
     "import numpy as np\n",
     "\n",
     "list1 = [11,22,33]\n",
-    "a = np.array(list1)\n",
-    "print(a)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "98813751",
-   "metadata": {},
-   "source": [
-    "<h1>Create a numpy Array:</h1>"
+    "a=np.array(list1)\n",
+    "print (a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "99e79952",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -74,23 +64,14 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "arr = np.array([1, 2, 3, 4, 5])\n",
-    "print(arr)\n",
+    "arr=np.array([1,2,3,4,5])   #1-D Array\n",
+    "print (arr)\n",
     "print(type(arr))"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "b6d7c211",
-   "metadata": {},
-   "source": [
-    "<h1>Create a 0-D Array with value 42:</h1>"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "22edd278",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -103,24 +84,13 @@
    ],
    "source": [
     "import numpy as np\n",
-    "\n",
-    "arr = np.array(42)\n",
-    "\n",
-    "print(arr)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "73da4a7e",
-   "metadata": {},
-   "source": [
-    "<h1>Create a 2-D Array conatining two arrays with the values 1,2,3 and 4,5,6</h1>"
+    "arr=np.array(42)           #0-D Array\n",
+    "print (arr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "fb3a7a58",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -134,55 +104,143 @@
    ],
    "source": [
     "import numpy as np\n",
-    "\n",
-    "arr = np.array([[1, 2, 3], [4, 5, 6]])\n",
-    "\n",
-    "print(arr)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1e67663f",
-   "metadata": {},
-   "source": [
-    "<h1>Create a 3-D Array containing three arrays with the values:</h1>"
+    "arr=np.array([[1,2,3],[4,5,6]])   #2-D Array\n",
+    "print (arr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "71da7b2c",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[ 1  2  3]\n",
-      "  [ 4  5  6]]\n",
+      "42\n",
+      "[1 2 3]\n",
+      "[[1 2 3]\n",
+      " [4 5 6]]\n",
+      "[[[1 2 3]\n",
+      "  [4 5 6]]\n",
       "\n",
-      " [[ 7  8  9]\n",
-      "  [10 11 12]]\n",
-      "\n",
-      " [[ 7  8  9]\n",
-      "  [10 11 12]]]\n",
-      "24\n"
+      " [[1 2 3]\n",
+      "  [4 5 6]]]\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "\n",
-    "arr = np.array([[[1, 2, 3], [4, 5, 6]], [[7, 8, 9], [10, 11, 12]],  [[7, 8, 9], [10, 11, 12]]])\n",
-    "print(arr)\n",
-    "add = arr[0,0,2]+arr[1,1,1]+arr[2,1,0]\n",
-    "print(add)\n"
+    "a=np.array(42)                                     #0-D Array\n",
+    "b=np.array([1,2,3])                                #1-D Array\n",
+    "c=np.array([[1,2,3],[4,5,6]])                      #2-D Array\n",
+    "d=np.array([[[1,2,3],[4,5,6]],[[1,2,3],[4,5,6]]])  #3-D Array\n",
+    "\n",
+    "print (a)\n",
+    "print (b)\n",
+    "print (c)\n",
+    "print (d)\n",
+    "\n",
+    "print (a.ndim)\n",
+    "print (b.ndim)\n",
+    "print (c.ndim)\n",
+    "print (d.ndim)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "arr=np.array([1,2,3,4,5])   #1-D Array\n",
+    "print (arr[0]+arr[1])\n",
+    "print (arr[0])\n",
+    "print (arr[2])\n",
+    "print (arr[3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2nd element on 1st row : 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "arr=np.array([[1,2,3],[4,5,6]])   #2-D Array\n",
+    "print ('2nd element on 1st row :',arr[0,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "arr=np.array([[[1,2,3],[4,5,6]],[[1,2,3],[4,5,6]]])   #2-D Array\n",
+    "print (arr[0,1,2]+arr[0,1,1]+arr[1,1,2])\n",
+    "print(arr[0,1,2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last element on 2nd dim : 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "arr=np.array([[1,2,3],[4,5,6]])   #2-D Array\n",
+    "print ('Last element on 2nd dim :',arr[1,-1])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11372ec6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -208,5 +266,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 2
 }
