--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -2,14 +2,34 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "10e676ab",
    "metadata": {},
    "source": [
-    "# numpy"
+    "## Import Numpy "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
+   "id": "14dcc0f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5374341d",
+   "metadata": {},
+   "source": [
+    "## Basic Example "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "118a5cbd",
    "metadata": {},
    "outputs": [
     {
@@ -27,29 +47,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
+   "id": "96151a5e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[11 22 33]\n"
-     ]
-    }
-   ],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "list1 = [11,22,33]\n",
-    "a=np.array(list1)\n",
-    "print (a)"
+    "## Create a NumPy array:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
+   "id": "a908312e",
    "metadata": {},
    "outputs": [
     {
@@ -63,15 +71,23 @@
    ],
    "source": [
     "import numpy as np\n",
-    "\n",
-    "arr=np.array([1,2,3,4,5])   #1-D Array\n",
-    "print (arr)\n",
+    "arr = np.array([1, 2, 3, 4, 5])\n",
+    "print(arr)\n",
     "print(type(arr))"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9fffdec0",
+   "metadata": {},
+   "source": [
+    "## Create a 0-D array with value 42"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
+   "id": "7602a14a",
    "metadata": {},
    "outputs": [
     {
@@ -84,14 +100,57 @@
    ],
    "source": [
     "import numpy as np\n",
-    "arr=np.array(42)           #0-D Array\n",
-    "print (arr)"
+    "\n",
+    "arr = np.array(42)\n",
+    "\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2454a6e",
+   "metadata": {},
+   "source": [
+    "## Create a 1-D array containing the values 1,2,3,4,5:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "0d025c4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "arr = np.array([1, 2, 3, 4, 5])\n",
+    "\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b05f0000",
+   "metadata": {},
+   "source": [
+    "## Create a 2-D array containing two arrays with the values 1,2,3 and 4,5,6:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "id": "0caae94a",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -104,28 +163,32 @@
    ],
    "source": [
     "import numpy as np\n",
-    "arr=np.array([[1,2,3],[4,5,6]])   #2-D Array\n",
-    "print (arr)"
+    "\n",
+    "arr = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a325b58",
+   "metadata": {},
+   "source": [
+    "## Check Number of Dimensions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 10,
+   "id": "ade25455",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "42\n",
-      "[1 2 3]\n",
-      "[[1 2 3]\n",
-      " [4 5 6]]\n",
-      "[[[1 2 3]\n",
-      "  [4 5 6]]\n",
-      "\n",
-      " [[1 2 3]\n",
-      "  [4 5 6]]]\n",
       "0\n",
       "1\n",
       "2\n",
@@ -136,114 +199,400 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "a=np.array(42)                                     #0-D Array\n",
-    "b=np.array([1,2,3])                                #1-D Array\n",
-    "c=np.array([[1,2,3],[4,5,6]])                      #2-D Array\n",
-    "d=np.array([[[1,2,3],[4,5,6]],[[1,2,3],[4,5,6]]])  #3-D Array\n",
+    "a = np.array(42) #0D\n",
+    "b = np.array([1, 2, 3, 4, 5]) #1D\n",
+    "c = np.array([[1, 2, 3], [4, 5, 6]]) #2D\n",
+    "d = np.array([[[1, 2, 3], [4, 5, 6]], [[1, 2, 3], [4, 5, 6]]]) #3D\n",
     "\n",
-    "print (a)\n",
-    "print (b)\n",
-    "print (c)\n",
-    "print (d)\n",
+    "print(a.ndim)\n",
+    "print(b.ndim)\n",
+    "print(c.ndim)\n",
+    "print(d.ndim)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ced7299c",
+   "metadata": {},
+   "source": [
+    "## Create an array with 5 dimensions and verify that it has 5 dimensions:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "bf69bde0",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[[[1 2 3 4]]]]]\n",
+      "number of dimensions : 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
     "\n",
-    "print (a.ndim)\n",
-    "print (b.ndim)\n",
-    "print (c.ndim)\n",
-    "print (d.ndim)\n",
-    "\n"
+    "arr = np.array([1, 2, 3, 4], ndmin=5)\n",
+    "\n",
+    "print(arr)\n",
+    "print('number of dimensions :', arr.ndim)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bfa06d9",
+   "metadata": {},
+   "source": [
+    "## Get the first element from the following array:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "88f764f8",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "arr = np.array([1, 2, 3, 4])\n",
+    "\n",
+    "print(arr[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5813c9b",
+   "metadata": {},
+   "source": [
+    "## Get the second element from the following array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "8966f8f6",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "arr = np.array([1, 2, 3, 4])\n",
+    "\n",
+    "print(arr[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4de32081",
+   "metadata": {},
+   "source": [
+    "## Get third and fourth elements from the following array and add them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "bdcabe01",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "arr = np.array([1, 2, 3, 4])\n",
+    "\n",
+    "print(arr[2] + arr[3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ced640b0",
+   "metadata": {},
+   "source": [
+    "## Access the element on the first row, second column:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "id": "97db5357",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n",
-      "2\n",
-      "3\n",
-      "4\n"
+      "2nd element on 1st row:  2\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
-    "\n",
-    "arr=np.array([1,2,3,4,5])   #1-D Array\n",
-    "print (arr[0]+arr[1])\n",
-    "print (arr[0])\n",
-    "print (arr[2])\n",
-    "print (arr[3])"
+    "arr = np.array([[1,2,3,4,5], [6,7,8,9,10]])\n",
+    "print('2nd element on 1st row: ', arr[0, 1])"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
+   "cell_type": "markdown",
+   "id": "e4c284c7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2nd element on 1st row : 2\n"
-     ]
-    }
-   ],
    "source": [
-    "import numpy as np\n",
-    "arr=np.array([[1,2,3],[4,5,6]])   #2-D Array\n",
-    "print ('2nd element on 1st row :',arr[0,1])"
+    "## Access the third element of the second array of the first array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
+   "execution_count": 16,
+   "id": "ebcd2c6b",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17\n",
       "6\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
-    "arr=np.array([[[1,2,3],[4,5,6]],[[1,2,3],[4,5,6]]])   #2-D Array\n",
-    "print (arr[0,1,2]+arr[0,1,1]+arr[1,1,2])\n",
-    "print(arr[0,1,2])"
+    "\n",
+    "arr = np.array([[[1, 2, 3], [4, 5, 6]], [[7, 8, 9], [10, 11, 12]]])\n",
+    "\n",
+    "print(arr[0, 1, 2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b35a1611",
+   "metadata": {},
+   "source": [
+    "##  Print the last element from the 2nd dim:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
+   "id": "526dd36d",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last element from 2nd dim:  10\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "arr = np.array([[1,2,3,4,5], [6,7,8,9,10]])\n",
+    "\n",
+    "print('Last element from 2nd dim: ', arr[1, -1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f3e4fd0",
+   "metadata": {},
+   "source": [
+    "##  Print the last element from the 2nd dim:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "448d8405",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last element from 2nd dim:  10\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "arr = np.array([[1,2,3,4,5], [6,7,8,9,10]])\n",
+    "\n",
+    "print('Last element from 2nd dim: ', arr[1, -1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "513c248f",
+   "metadata": {},
+   "source": [
+    "<h1 style=\"color:Tomato;\" > Sliceing the  elements </h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e481506e",
+   "metadata": {},
+   "source": [
+    "## Slice elements from index 1 to index 5 from the following array:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "d40ffb20",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last element on 2nd dim : 6\n"
+      "[2 3 4 5]\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
-    "arr=np.array([[1,2,3],[4,5,6]])   #2-D Array\n",
-    "print ('Last element on 2nd dim :',arr[1,-1])"
+    "\n",
+    "arr = np.array([1, 2, 3, 4, 5, 6, 7])\n",
+    "\n",
+    "print(arr[1:5])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cabd64f8",
+   "metadata": {},
+   "source": [
+    "## Slice elements from index 4 to the end of the array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
+   "id": "41cc706b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5 6 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "arr = np.array([1, 2, 3, 4, 5, 6, 7])\n",
+    "\n",
+    "print(arr[4:])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40366121",
+   "metadata": {},
+   "source": [
+    "## Slice elements from the beginning to index 4 (not included):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "434c2c16",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "arr = np.array([1, 2, 3, 4, 5, 6, 7])\n",
+    "\n",
+    "print(arr[:4])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50f1fef7",
+   "metadata": {},
+   "source": [
+    "## Negative SlicingSlice elements from the beginning to index 4 (not included):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "a78d99e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "arr = np.array([1, 2, 3, 4, 5, 6, 7])\n",
+    "\n",
+    "print(arr[-3:-1])"
+   ]
   }
  ],
  "metadata": {
@@ -262,9 +611,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 5
 }
